--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "glm"]
 	path = glm
 	url = https://github.com/g-truc/glm.git
+[submodule "nuklear"]
+	path = nuklear
+	url = https://jie211@github.com/jie211/nuklear.git
